--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 SET(CMAKE_CXX_COMPILER g++-4.8)
-SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -march=native -flto -O3")
+# SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -march=native -flto -O3")
+SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -march=native -gdwarf-2 -g3")
 
 INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/")
 
@@ -42,7 +43,9 @@ SET(__TARGET_NAME__ test001)
 SET(__SRC__
     ./test/test001.cpp
     ./src/afs/fscore/fscore.cpp
+    ./src/afs/inode/inode.cpp
     ./src/afs/fsinterface/fsinterface.cpp
+    ./src/afs/fsinterface/fsinterface_helper.cpp
 )
 ADD_EXECUTABLE(${__TARGET_NAME__} ${__SRC__})
 TARGET_LINK_LIBRARIES(${__TARGET_NAME__} gtest gtest_main pthread)
